# Smooth-Noisy-Data

./: LICENSE  README.md  average_smoothing_XRD.py  noisy_XRD_data.csv  pyproject.toml
data/: noisy_data.csv
src/smooth-xrd/: main.py
